--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin></script>
-    <title>React App</title>
+    <title>Expense Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
